--- a/Dartboard.Utils/Dartboard.Utils.csproj
+++ b/Dartboard.Utils/Dartboard.Utils.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{00965042-5C6F-436B-9F6B-53A351F4FA69}</ProjectGuid>
+    <ProjectGuid>{550ACDC7-6EE7-4256-81C1-0D5ED91BBB9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DART.Dartboard.Control</RootNamespace>
-    <AssemblyName>Dartboard.Control</AssemblyName>
+    <RootNamespace>Dartboard.Utils</RootNamespace>
+    <AssemblyName>Dartboard.Utils</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -46,17 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="LoggableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Dartboard.Utils\Dartboard.Utils.csproj">
-      <Project>{550acdc7-6ee7-4256-81c1-0d5ed91bbb9b}</Project>
-      <Name>Dartboard.Utils</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
