--- a/Dartboard.HID/packages.config
+++ b/Dartboard.HID/packages.config
@@ -5,4 +5,5 @@
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.DirectInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpDX.XInput" version="4.0.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
