--- a/Dartboard.Networking/packages.config
+++ b/Dartboard.Networking/packages.config
@@ -4,4 +4,5 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="MsgPack" version="0.1.0.2011042300" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
