--- a/Dartboard.HID/packages.config
+++ b/Dartboard.HID/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="SharpDX" version="4.0.1" targetFramework="net461" />
