--- a/Dartboard.GUI/packages.config
+++ b/Dartboard.GUI/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="MJPEG-Decoder" version="1.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
