--- a/Dartboard.GUI/App.config
+++ b/Dartboard.GUI/App.config
@@ -10,11 +10,11 @@
   </startup>
   <common>
     <logging>
-      <factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+      <factoryAdapter type="DART.Dartboard.GUI.Logging.TextBoxLoggerFactoryAdapter, DART.Dartboard.GUI">
         <arg key="level" value="INFO" />
         <arg key="showLogName" value="true" />
         <arg key="showDateTime" value="true" />
-        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+        <arg key="dateTimeFormat" value="HH:mm:ss:fff" />
       </factoryAdapter>
     </logging>
   </common>
