Ton of changes from laptop

--- a/Dartboard.Control/packages.config
+++ b/Dartboard.Control/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="DynamicLanguageRuntime" version="1.1.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="Vector3D" version="1.0.2" targetFramework="net461" />
 </packages>
