--- a/Dartboard.GUI/packages.config
+++ b/Dartboard.GUI/packages.config
@@ -6,4 +6,8 @@
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="MJPEG-Decoder" version="1.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core" version="2.1.154" targetFramework="net461" />
+  <package id="Vlc.DotNet.Core.Interops" version="2.1.154" targetFramework="net461" />
+  <package id="Vlc.DotNet.Forms" version="2.1.154" targetFramework="net461" />
+  <package id="Vlc.DotNet.Wpf" version="2.1.154" targetFramework="net461" />
 </packages>
