--- a/Dartboard.Models/Dartboard.Models.csproj
+++ b/Dartboard.Models/Dartboard.Models.csproj
@@ -49,11 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="DoRequestMessage.cs" />
     <Compile Include="HID\GamepadState.cs" />
     <Compile Include="HID\HIDConfig.cs" />
     <Compile Include="HID\JoystickState.cs" />
+    <Compile Include="ProcessingFrame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobotConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
