--- a/Dartboard.GUI/App.config
+++ b/Dartboard.GUI/App.config
@@ -11,7 +11,7 @@
   <common>
     <logging>
       <factoryAdapter type="DART.Dartboard.GUI.Logging.TextBoxLoggerFactoryAdapter, DART.Dartboard.GUI">
-        <arg key="level" value="INFO" />
+        <arg key="level" value="DEBUG" />
         <arg key="showLogName" value="true" />
         <arg key="showDateTime" value="true" />
         <arg key="dateTimeFormat" value="HH:mm:ss:fff" />
