--- a/Simulator/packages.config
+++ b/Simulator/packages.config
@@ -7,6 +7,7 @@
   <package id="HelixToolkit" version="2015.1.715" targetFramework="net462" />
   <package id="HelixToolkit.Wpf" version="2015.1.715" targetFramework="net462" />
   <package id="IronPython" version="2.7.7" targetFramework="net462" />
+  <package id="MathNet.Numerics" version="3.20.0" targetFramework="net461" />
   <package id="MsgPack" version="0.1.0.2011042300" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="SharpDX" version="4.0.1" targetFramework="net462" />
