--- a/Dartboard.GUI/packages.config
+++ b/Dartboard.GUI/packages.config
@@ -4,7 +4,9 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="MathNet.Numerics" version="3.20.0" targetFramework="net461" />
   <package id="MJPEG-Decoder" version="1.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="2.1.154" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="2.1.154" targetFramework="net461" />
