--- a/Dartboard.Utils/Dartboard.Utils.csproj
+++ b/Dartboard.Utils/Dartboard.Utils.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{550ACDC7-6EE7-4256-81C1-0D5ED91BBB9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dartboard.Utils</RootNamespace>
+    <RootNamespace>DART.Dartboard.Utils</RootNamespace>
     <AssemblyName>Dartboard.Utils</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,6 +39,9 @@
     <Reference Include="MathNet.Numerics, Version=3.20.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.3.20.0\lib\net40\MathNet.Numerics.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -56,6 +59,7 @@
     <Compile Include="LoggableObject.cs" />
     <Compile Include="Numerics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
