--- a/Dartboard.Utils/packages.config
+++ b/Dartboard.Utils/packages.config
@@ -3,5 +3,6 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="MathNet.Numerics" version="3.20.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
