--- a/Dart.Robots.Adam/Dart.Robots.Adam.csproj
+++ b/Dart.Robots.Adam/Dart.Robots.Adam.csproj
@@ -31,12 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.5.2\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -56,6 +58,10 @@
     <ProjectReference Include="..\Dartboard.Integration\Dartboard.Integration.csproj">
       <Project>{8d58d0b2-aca5-42ec-8497-fce14d42f24e}</Project>
       <Name>Dartboard.Integration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dartboard.Utils\Dartboard.Utils.csproj">
+      <Project>{317a5e95-afd0-402a-a77c-2245358de6c0}</Project>
+      <Name>Dartboard.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
