--- a/Dartboard.Networking/Dartboard.Networking.csproj
+++ b/Dartboard.Networking/Dartboard.Networking.csproj
@@ -60,7 +60,7 @@
     <Compile Include="IMessageFormatter.cs" />
     <Compile Include="Json\JsonMessageFormatter.cs" />
     <Compile Include="Message\Expireable.cs" />
-    <Compile Include="NetworkClient.cs" />
+    <Compile Include="AbstractNetworkClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Message\RequestElement.cs" />
     <Compile Include="Message\ResponseMessage.cs" />
