--- a/Daryboard.Control/Daryboard.Control.csproj
+++ b/Daryboard.Control/Daryboard.Control.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{56F2C461-E7C9-4271-95D5-9903836C9BFA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Dartboard.CLI</RootNamespace>
-    <AssemblyName>Dartboard.CLI</AssemblyName>
+    <ProjectGuid>{DA4CD822-DFDF-4711-B54F-0D98753433C1}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Daryboard.Control</RootNamespace>
+    <AssemblyName>Daryboard.Control</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,16 +31,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.5.3\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,24 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobotController.cs" />
+    <Compile Include="RobotState.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Dart.Robots.Adam\Dart.Robots.Adam.csproj">
-      <Project>{7542a987-3ca6-42bf-9adc-6464413189f6}</Project>
-      <Name>Dart.Robots.Adam</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Dartboard.Integration\Dartboard.Integration.csproj">
       <Project>{8d58d0b2-aca5-42ec-8497-fce14d42f24e}</Project>
       <Name>Dartboard.Integration</Name>
@@ -80,14 +57,6 @@
     <ProjectReference Include="..\Dartboard.Utils\Dartboard.Utils.csproj">
       <Project>{317a5e95-afd0-402a-a77c-2245358de6c0}</Project>
       <Name>Dartboard.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dartboard\Dartboard.csproj">
-      <Project>{01a0fefb-f99e-4a1d-b0cb-9ac7607c82f4}</Project>
-      <Name>Dartboard</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Daryboard.Control\Daryboard.Control.csproj">
-      <Project>{da4cd822-dfdf-4711-b54f-0d98753433c1}</Project>
-      <Name>Daryboard.Control</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
