--- a/Dartboard.TheBox/Dartboard.TheBox.csproj
+++ b/Dartboard.TheBox/Dartboard.TheBox.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA4CD822-DFDF-4711-B54F-0D98753433C1}</ProjectGuid>
+    <ProjectGuid>{6032D40D-42B1-4561-9B71-3E95336A000B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dartboard.Control</RootNamespace>
-    <AssemblyName>Dartboard.Control</AssemblyName>
+    <RootNamespace>Dartboard.TheBox</RootNamespace>
+    <AssemblyName>Dartboard.TheBox</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,30 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Box.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RobotController.cs" />
-    <Compile Include="RobotState.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dartboard.Integration\Dartboard.Integration.csproj">
-      <Project>{8d58d0b2-aca5-42ec-8497-fce14d42f24e}</Project>
-      <Name>Dartboard.Integration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dartboard.Networking\Dartboard.Networking.csproj">
-      <Project>{3768d4fe-f01b-4c91-a09d-568a2743c251}</Project>
-      <Name>Dartboard.Networking</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dartboard.TheBox\Dartboard.TheBox.csproj">
-      <Project>{6032d40d-42b1-4561-9b71-3e95336a000b}</Project>
-      <Name>Dartboard.TheBox</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Dartboard.Utils\Dartboard.Utils.csproj">
-      <Project>{317a5e95-afd0-402a-a77c-2245358de6c0}</Project>
-      <Name>Dartboard.Utils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
